[tool.poetry]
name = "until-zero"
version = "0.1.0"
description = ""
authors = ["u8slvn <u8slvn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "until_zero"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
pillow = "^10.0.0"
playsound = "1.2.2"
pyglet = "^2.0.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.4.1"
types-pillow = "^10.0.0.1"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
types-playsound = "^1.3.1.3"
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "until_zero"
mypy_path = "until_zero"

[tool.black]
line_length = 99

[tool.ruff]
fix = true
line-length = 99
extend-select = [
    "I",   # isort
]

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
required-imports = [
    "from __future__ import annotations",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=until_zero"]
